# Diplom

./: .gitignore  CMakeLists.txt  config.ini
http_server/: CMakeLists.txt  db.cpp  db.h  http_connection.cpp  http_connection.h  iniParser.h  link.h  main.cpp  struct.h
spider/: CMakeLists.txt  config.ini  db.cpp  db.h  http_utils.cpp  iniParser.h  main.cpp  struct.h
